14111
The following code fails to compile.

{code}
import scala.continuations.ControlContext._

object Test19 {
  def shifted: Int @suspendable = shift { (k: Int => Unit) => () }
  def test1(b: => Boolean) = {
    reset {
      if (b) shifted
    }
  }
}
{code}

{code}
test/files/pos/rich19.scala:7: error: found cps expression in non-cps position
      if (b) shifted
             ^
test/files/pos/rich19.scala:7: error: then and else parts must both be cps code or neither of them
      if (b) shifted
      ^
two errors found
{code}

I don't think it should be necessary for the then and else parts of an if statement to both be CPS code.
